--- a/t2.md
+++ b/t2.md
@@ -1232,7 +1232,7 @@ Encara que hauria de ser obvi, val la pena destacar que, si `f` és pura:
 ### Exemples
 
 * Podem tornar al recorregut en profunditat d'un graf que vam veure
-[anteriorment](https://jdelgadopin.github.io/CAP2024-25/s01_02.html#48). Podem fer-lo més _funcional_ aprofitant 
+[anteriorment](https://jdelgadopin.github.io/cap/t1.html#48). Podem fer-lo més _funcional_ aprofitant 
 que era iteratiu (podem convertir-lo fàcilment a recursiu final i aprofitar la TCO que ens proporciona `recur`)
 i que ara coneixem la familia `fold`.
 
@@ -1243,7 +1243,7 @@ i que ara coneixem la familia `fold`.
 ### Exemples
 
 * Podem tornar al recorregut en profunditat d'un graf que vam veure
-[anteriorment](https://jdelgadopin.github.io/CAP2024-25/s01_02.html#48). Podem fer-lo més _funcional_ aprofitant 
+[anteriorment](https://jdelgadopin.github.io/cap/t1.html#48). Podem fer-lo més _funcional_ aprofitant 
 que era iteratiu (podem convertir-lo fàcilment a recursiu final i aprofitar la TCO que ens proporciona `recur`)
 i que ara coneixem la familia `fold`:
 
@@ -1265,7 +1265,7 @@ La solució proposada seria:
 ```
 
 .small[**Exercici**: Compareu aquesta versió amb la versió del 
-[Tema 1](https://jdelgadopin.github.io/CAP2024-25/s01_02.html#48).
+[Tema 1](https://jdelgadopin.github.io/cap/t1.html#48).
 Veureu que no són tan diferents.]
 
 ---
