--- a/t3.md
+++ b/t3.md
@@ -617,7 +617,7 @@ Per quina raó NO ho és?]
 
 Veiem un exemple no trivial d'aquesta equivalència entre el `let` i
 les crides a funcions. Recordeu la plana
-[9](https://jdelgadopin.github.io/CAP2024-25/s05_06.html#9)?
+[9](https://jdelgadopin.github.io/cap/t3.html#9)?
 
 Transformem aquell `let` en crides a funcions:
 
@@ -1226,8 +1226,8 @@ laboratori.
 
 Fins aquí la introducció a les **_funcions d'ordre superior_**, on hem tractat les possibilitats
 que ofereix el fet de poder passar funcions com a paràmetre d'altres funcions ([Funcions
-_first-class_](https://jdelgadopin.github.io/CAP2024-25/s03_04.html)), i el fet de poder retornar
-funcions des d'altres funcions ([_Closures_](https://jdelgadopin.github.io/CAP2024-25/s05_06.html)).
+_first-class_](https://jdelgadopin.github.io/cap/t2.html)), i el fet de poder retornar
+funcions des d'altres funcions ([_Closures_](https://jdelgadopin.github.io/cap/t3.html)).
 
 En el proper tema del curs veurem algunes de les tècniques que podem fer servir gràcies al fet
 de tenir **_funcions d'ordre superior_**.
