--- a/t4.md
+++ b/t4.md
@@ -56,7 +56,7 @@ així:
 
 
 De vegades, però, tot i tenint ocasió de fer servir el _pipelining_ no l'hem utilitzat. Si
-recordeu la versió funcional de l'[algorisme de Kadane](https://jdelgadopin.github.io/CAP2024-25/s03_04.html#27):
+recordeu la versió funcional de l'[algorisme de Kadane](https://jdelgadopin.github.io/cap/t2.html#27):
 ```Clojure
 (def kadane #(apply max (scanr max0 0 %)))
 ```
@@ -81,7 +81,7 @@ supports higher-order functions and data immutability._
 (defn run-pipeline [data & steps]
   (reduce (fn [d step] (step d)) data steps))
 ```
-Us [sona](https://jdelgadopin.github.io/CAP2024-25/s05_06.html#33)?... És força similar
+Us [sona](https://jdelgadopin.github.io/cap/t3.html#33)?... És força similar
 al `my-comp` que vam definir el tema passat.
 
 ```Clojure
