--- a/t7.md
+++ b/t7.md
@@ -1039,7 +1039,7 @@ una expressió en el, diguem-ne, "_primer nivell_":
 Modifiqueu la funció per a que faci la substitució en qualsevol
 subexpressió de l'expressió que rep com a argument. Podeu fer servir
 `postwalk`, explicat a la [_Frikada_
-Final](https://jdelgadopin.github.io/CAP2024-25/s11.html#43)]
+Final](https://jdelgadopin.github.io/cap/t7.html#43)]
 
 ---
 
