--- a/t4.md
+++ b/t4.md
@@ -6,7 +6,7 @@ class: center, up
 
 **Jordi Delgado**, **Gerard Escudero**,
 
-.large[**Curs 2024-25**: <ins>Tema 4</ins>]
+.large[<ins>Tema 4</ins>]
 
 ![:scale 40%](figures/fib50anysUPC.png)
 
