--- a/t4.md
+++ b/t4.md
@@ -12,285 +12,233 @@ class: center, up
 
 ---
 
-## Tècniques de Programació amb FOS
-
-En aquest tema veurem tècniques de programació fortament lligades al fet de tenir _Funcions d'Ordre 
-Superior_ (FOS). En alguns casos seran tècniques noves, que encara no hem vist, i en alguns casos ens
-limitarem a posar nom a tècniques que ja hem fet servir en posar exemples dins els dos temes anteriors.
-
-Començarem per una tècnica que ja hem vist quan hem insistit en fer servir el _point-free style_ 
-o _Tacit programming_, és a dir, en definir funcions a partir de la composició d'altres funcions. 
-En fer servir aquest estil sovint no cal fer explícits els paràmetres (d'aquí l'expressió _point-free_).
-
-Definir funcions fent servir la composició de funcions s'anomena **_pipelining_**. A Clojure, la funció
-`comp`, juntament amb la possibilitat de definir funcions _parcials_ fent servir `partial`, ens 
-permet fer servir molt fàcilment aquesta tècnica.
-
-Al [laboratori](https://gebakx.github.io/cap/problemes/first-class.pdf) heu tingut ocasió de 
-practicar el _pipelining_, per exemple:
-
-```Clojure
-(def prod-of-evens (comp (partial apply *) (partial filter even?)))
-
-(def scalar-product (comp (partial apply +) (partial map *)))
-```
+## _Closures_: Divideix i venç
 
 
----
+Esperem que estigui clar a hores d'ara que la capacitat de fer
+servir funcions d'ordre superior ens permet treballar a nivells
+d'abstracció més "_alts_" dels que podem assolir si no tenim aquesta
+capacitat.
 
-## _Pipelining_
+Un dels exemples més clars d'això és la possibilitat d'"_algorismitzar_" esquemes de
+disseny algorísmic. Veiem com passar de l'esquema al programa amb l'esquema de **_Dividir i Vèncer_**.red[*].
 
-Un altre exemple, l'[exercici 4](https://gebakx.github.io/cap/firstClass.html#18) de la sessió de 
-[Funcions _First-Class_](https://gebakx.github.io/cap/firstClass.html) podríem haver-lo resolt
-així:
+_In computer science, **divide and conquer** is an **algorithm design
+paradigm**. A divide-and-conquer algorithm recursively breaks down a
+problem into two or more sub-problems of the same or related type,
+until these become simple enough to be solved directly. The solutions
+to the sub-problems are then combined to give a solution to the
+original problem_.
 
-```Clojure
-;; Escriu una funció que, donat un vector de maps amb les claus :preu i 
-;; :quantitat, calculi el total per cada element (preu * quantitat), elimini 
-;; els que tinguin un valor total inferior a 100 i sumi tots els totals.
+Exemples coneguts de l'aplicació d'aquest esquema són: la cerca binària, Quicksort,
+Mergesort, producte ràpid de Karatsuba, la multiplicació de matrius de Strassen, l'algorisme de
+Cooley-Tukey per calcular la transformada ràpida de Fourier, etc.
 
-(def exercici4 (comp (partial apply +) 
-                     (partial filter #(< 100 %)) 
-                     (partial map #(* (:preu %) (:quantitat %)))))
-```
+Anem a veure com transformar aquest esquema, o _design paradigm_, en
+un programa. Farem servir el cas més senzill, deixem com a
+**exercici** la seva generalització.
 
-
-De vegades, però, tot i tenint ocasió de fer servir el _pipelining_ no l'hem utilitzat. Si
-recordeu la versió funcional de l'[algorisme de Kadane](https://jdelgadopin.github.io/cap/t2.html#27):
-```Clojure
-(def kadane #(apply max (scanr max0 0 %)))
-```
-podríem haver-ho definit:
-```Clojure
-(def kadane (comp (partial apply max) (partial scanr max0 0)))
-```
----
-
-##_Pipelining_: El Patró
-
-El mateix concepte de _pipeline_ és considerat un patró de disseny.red[*]
-
-_The Pipeline pattern organizes a series of computational steps so
-that each step handles a specific aspect of processing. In Clojure,
-this translates well due to its functional programming paradigm that
-supports higher-order functions and data immutability._
-
-```Clojure
-;; Segons el lloc web font d'aquesta transparència...
-
-(defn run-pipeline [data & steps]
-  (reduce (fn [d step] (step d)) data steps))
-```
-Us [sona](https://jdelgadopin.github.io/cap/t3.html#33)?... És força similar
-al `my-comp` que vam definir el tema passat.
-
-```Clojure
-(defn my-comp [& funcs]
-  "funcs: llista de funcions d'un paràmetre tals que 'té sentit' composar-les"
-  (fn [arg] 
-      "arg ha de pertànyer al domini de la darrera funció de funcs"
-      (fold #(%1 %2) arg funcs)))
-```
-
-.footnote[.red[*] [Pipeline in Clojure](https://softwarepatternslexicon.com/patterns-clojure/behavioral/pipeline/)]
+.footnote[.red[*] [Font](https://en.wikipedia.org/wiki/Divide-and-conquer_algorithm)]
 
 ---
 
-## _Pipelining_: Les _arrow macros_
+## _Closures_: Divideix i venç
 
-Clojure ens proporciona un parell de macros que ens aniran molt bé per
-utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
-**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
-en un flux lineal de crides a funció.
+Suposem que els valors sobre els que treballarem són **vectors**. I suposem també que disposem
+de les següents quatre funcions: 
 
-### La macro _thread-first_ (->)
+* `trivial`: Funció que detecta el cas trivial, o cas base, del problema
+* `directe`: Acció a realitzar en el cas base.
+* `dividir`: Si no estem en el cas base, cal dividir el problema en dos sub-problemes.
+* `vèncer`: Acció a realitzar per composar les solucions dels subproblemes.
 
-Suposem que tenim funcions `f1`,`f2`,...,`fn` amb `k1`,`k2`,..., `kn` paràmetres cada una (`ki` > 0).
-Per expressar:
-
-```Clojure
-(fn ... (f2 (f1 x ...) ...) ...)
-```
-Podem fer servir `->`, on es passa com a _primer_ argument el resultat de l'aplicació de
-la funció anterior:
+Aleshores, donat un problema concret sobre vectors pel que hem
+definit les funcions anteriors, i l'esquema en forma de programa `dIv`
+(encara per definir), el programa per resoldre el problema seria:
 
 ```Clojure
-  (-> x (f1 ...)  ;; on ... representa els k1-1 arguments restants d'f1
-        (f2 ...)  ;; on ... representa els k2-1 arguments restants d'f2
-        ...
-        (fn ...)) ;; on ... representa els kn-1 arguments restants d'fn
+(def solució (dIv trivial directe dividir vèncer))
 ```
-Si alguna de les funcions `fi` té un sol paràmetre, no cal fer servir parèntesi, només
-cal escriure el nom.
-
-.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+Concretem-ho amb un exemple clàssic: **Quicksort**
 
 ---
 
-## _Pipelining_: Les _arrow macros_
+## _Closures_: Divideix i venç
 
-Clojure ens proporciona un parell de macros que ens aniran molt bé per
-utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
-**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
-en un flux lineal de crides a funció.
-
-### La macro _thread-first_ (->)
-
-Veiem-ne exemples (fixem-nos que no cal escriure `partial`):
+Les funcions anteriors pel cas particular del _Quicksort_ podrien ser:
 
 ```Clojure
-(* (+ (- (/ 2 1) 3) 4 )5)      👉 15
-(-> 2 (/ 1) (- 3) (+ 4) (* 5)) 👉 15 
+(def trivial #(< (count %) 2)) ;; vector buit o amb un sol element
 
-(str (str (str "Això" " " "és" " ") 
-          "un" " " "exemple" " " "de") 
-     " " "la" " " "macro" " " "->")   👉 "Això és un exemple de la macro ->"
-(->
- (str "Això" " " "és" " ")
- (str "un" " " "exemple" " " "de")
- (str " " "la" " " "macro" " " "->")) 👉 "Això és un exemple de la macro ->"
- 
-(.toUpperCase (first ["pollastre" "xai"]))  👉 "POLLASTRE"
-(-> ["pollastre" "xai"] first .toUpperCase) 👉 "POLLASTRE"
+(def directe identity)         ;; no cal fer res en el cas base
+
+(defn dividir
+  "vct té més d'un element"
+  [vct]
+  (let [[x & rstv] vct         ;; el pivot serà el primer element del vector
+        menors (filter #(<= % x) rstv)
+        majors (filter #(> % x)  rstv)]
+    [menors,majors]))          ;; retornem les dos subvectors
+
+(defn vèncer
+  "Pel quicksort no ens importa la parella de vectors originals"
+  [vct _ [sol1 sol2]]
+  (concat sol1 [(first vct)] sol2))  ;; combinem solucions amb el pivot
 ```
+Aleshores...
+```Clojure
+(def quicksort (dIv trivial directe dividir vèncer))
 
-.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+(let [s  (shuffle (range 20))]
+   (println s)
+   (quicksort s))
+👁️ [9 6 15 3 2 4 13 5 17 7 11 1 14 12 0 16 18 10 19 8]
+👉 (0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19)
+```
 
 ---
 
-## _Pipelining_: Les _arrow macros_
+## _Closures_: Divideix i venç
 
-Clojure ens proporciona un parell de macros que ens aniran molt bé per
-utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
-**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
-en un flux lineal de crides a funció.
-
-### La macro _thread-first_ (->)
-
-Seguim amb exemples:
+Finalment, com és `dIv`? Naturalment és una _closure_ on, donades les
+funcions mencionades, es retorna una funció que només requereix
+l'entrada del problema (en aquest cas un vector, o seqüència). Com hem
+dit abans, aquest és el cas més senzill, on suposem que la
+descomposició del problema és en dos subproblemes:
 
 ```Clojure
-(assoc (assoc (assoc {} :clau1 24) :clau2 36) :clau3 48) 
-👉 {:clau1 24, :clau2 36, :clau3 48}
-(-> {}
-    (assoc :clau1 24)
-    (assoc :clau2 36)
-    (assoc :clau3 48)) 👉 {:clau1 24, :clau2 36, :clau3 48}
-    
-(conj (conj (conj [] 3) 5) 7) 👉 [3 5 7]
-(-> []
-    (conj 3)
-    (conj 5)
-    (conj 7)) 👉 [3 5 7]
+(defn dIv
+  [trivial directe dividir vèncer]
+  (letfn [(dIv' [vct]
+            (if (trivial vct)
+              (directe vct)
+              (let [[x1 x2] (dividir vct)
+                    y1 (dIv' x1)
+                    y2 (dIv' x2)]
+                (vèncer vct [x1,x2] [y1,y2]))))]
+    dIv'))
 ```
+Fixem-nos que és pràcticament una _transcripció literal_ de l'esquema de _dividir i vèncer_ 
+que tots coneixem.
 
-.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+Aquest és un gran exemple de fins a quin punt tenir funcions d'ordre superior pot canviar la nostra
+manera de programar.
 
 ---
 
-## _Pipelining_: Les _arrow macros_
+## _Closures_: _Backtracking_
 
-Clojure ens proporciona un parell de macros que ens aniran molt bé per
-utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
-**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
-en un flux lineal de crides a funció.
+Explorem un exemple més de transformacions d'esquema algorísmic en
+programa: l'esquema de **_Backtracking_** (_tornada enrera_).red[*].
 
-### La macro _thread-last_ (->>)
+Aquests algorismes, en general, són algorismes que enumeren solucions
+parcials a un determinat problema, decidint si val la pena continuar
+completant les solucions o no. En cas negatiu, es torna enrera a mirar
+de construir noves solucions re-avaluant decisions preses
+anteriorment.
 
-Suposem que tenim funcions `f1`,`f2`,...,`fn` amb `k1`,`k2`,..., `kn` paràmetres cada una (`ki` > 0).
-Per expressar:
+És molt similar a una cerca en profunditat sobre un graf _implícit_.
+Aquest graf implícit ve donat per una funció `successor`, que, donada
+una solució parcial, permet generar els _veïns_ del node actual, és a
+dir, solucions més completes donada la validesa de la solució parcial
+que representa el node actual. El resultat és una exploració parcial
+d'un _arbre implícit de cerca_, on no cal generar totes les branques
+possibles (s'esporguen les que depenen de solucions parcials no
+vàlides).
 
-```Clojure
-(fn ... (f2 ... (f1 ... x)))
-```
-Podem fer servir `->>`, on es passa com a _darrer_ argument el resultat de l'aplicació de
-la funció anterior:
+Apliquem-ho a un problema clàssic: **_Les $n$-reines_**. 
 
-```Clojure
-  (->> x (f1 ...)  ;; on ... representa els k1-1 arguments restants d'f1
-         (f2 ...)  ;; on ... representa els k2-1 arguments restants d'f2
-         ...
-         (fn ...)) ;; on ... representa els kn-1 arguments restants d'fn
-```
-Si alguna de les funcions `fi` té un sol paràmetre, no cal fer servir parèntesi, només
-cal escriure el nom.
+Recordeu: En un tauler $n \times n$ cal posar $n$ reines de manera que
+no es matin entre elles.
 
-.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+.footnote[.red[*] [Font](https://en.wikipedia.org/wiki/Backtracking)]
 
 ---
 
-## _Pipelining_: Les _arrow macros_
+## _Closures_: _Backtracking_
 
-Clojure ens proporciona un parell de macros que ens aniran molt bé per
-utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
-**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
-en un flux lineal de crides a funció.
+Suposem que disposem d'un programa anomenat `bTck` amb paràmetres la funció `successor` i
+una funció que sigui capaç de decidir si hem trobat l'objectiu `objectiu`.
+Qualsevol altre informació dependrà del problema. En particular, cal decidir com es representen
+els nodes del graf implícit. Aquesta funció retorna una _closure_ que té l'estat inicial
+com a paràmetre.
 
-### La macro _thread-last_ (->>)
+En el cas de les $n$-reines representarem la informació amb un vector `[col n [[c1 f1] [c2 f2]...[ck fk]]]`
+on `col` representa la columna actual on volem posar la reina $k+1$-èssima, considerant que $k$ reines ja
+estan ben posades, la qual cosa representem amb la solució parcial `[[c1 f1] [c2 f2]...[ck fk]]`. Les funcions
+`successor`, `objectiu` i l'estat inicial dependran d'aquesta representació. Cada solució completa serà un 
+vector `[n+1 n [[c1 f1] [c2 f2]...[cn fn]]]`.
 
-Veiem-ne exemples (fixem-nos que no cal escriure `partial`):
+Les funcions que defineixen l'estat inicial i el fet d'arribar a l'objectiu són molt senzilles:
 
 ```Clojure
-(reduce + (map #(* % %) (filter odd? (range 10)))) 👉 165
-(->> (range 10)
-     (filter odd?)
-     (map #(* % %))
-     (reduce +)) 👉 165
-     
-(def prod-of-evens (comp (partial apply *) (partial filter even?)))
-(defn prod-of-evens' [s]
-  (->> s
-       (filter even?)
-       (apply *)))
-(prod-of-evens  (range 1 21)) 👉 3715891200
-(prod-of-evens' (range 1 21)) 👉 3715891200
+(defn initialNQ [n]  ;; columna 1, solució parcial buida []
+  [1 n []])
+
+(defn objNQ [[c n psol]]  ;; acabem quan la columna a considerar c > n
+  (> c n))                ;; la solució parcial psol associada és completa
 ```
 
-.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
-
 ---
 
-## _Pipelining_: Exercicis Recapitulatoris
+## _Closures_: _Backtracking_
 
-* Considereu una seqüència de parells `'[(n1,n2) (n3,n4) ...]` que
-  implementa les arestes d'un graf no dirigit (no hi ha arestes
-  repetides ni auto-bucles). Feu una funció `grau` que calculi el grau
-  d'un vertex donat. Els vertexos es representen amb nombres.
+La funció `successor` senzillament mira de posar la reina a les diferents files de la columna `c` de 
+manera que la proposta `[c f]` sigui compatible/vàlida respecte a la solució parcial `psol`. Per a això
+es defineix la funció `valid` que controla què es genera a la llista per comprensió.
 
-* Sobre la mateixa representació de les arestes d'un graf no dirigit,
-  feu ara una funció `veïns` que retorni els veïns d’un vèrtex donat,
-  en ordre creixent.
+```Clojure
+(defn succNQ [[c n psol]]  ;; donats una columna, n i una solució parcial
+  (letfn [(valid [psol [c r]]
+            (letfn [(test [[c' r']]
+                      (and (not= (+ c' r') (+ c r))
+                           (not= (- c' r') (- c r))
+                           (not= r' r)))]
+              (every? identity (map test psol))))]
+    (for [r (range 1 (inc n)) :when (valid psol [c r])]
+      [(inc c) n (conj psol [c r])])))
+```
 
-* Donats dos vectors d’enters `x=(x1,...,xn)` i `y=(y1,...,yn)` de la
-  mateixa mida, el seu producte escalar és `(apply + (map * x y))`.
-  Suposant que podem permutar les coordenades de cada vector de la
-  forma que volguem, podem escollir dues permutacions dels dos vectors
-  que tinguin producte escalar mínim. Escriviu una funció `minProd`
-  que, donats dos vectors de la mateixa mida, retorni el seu producte
-  escalar mínim.
-  
-* Feu una funció `zerosNones` que, donat un `n ≥ 0`,
-  retorni totes les combinacions de `z` zeros i `u` uns tals que `z + u = n`
+Així doncs ja podem definir les funcions que resolen el problema de les $n$-reines, donat $n$:
 
-* Els divisors propis d’un nombre `n` són tots els divisors positius de `n` més petits que `n`.
-  Feu una funció `divisors` _eficient_ que retorni tots els divisors propis d'un nombre `n`
-  ordenats decreixentment.
+```Clojure
+(defn solucio-NReines [n]
+  (let [[[_ _ s] & cua] ((bTck succNQ objNQ) (initialNQ n))]
+    s))
 
+(defn nombre-solucions-NReines [n]
+  (count ((bTck succNQ objNQ) (initialNQ n))))
+```
 ---
 
-## _Pipelining_
+## _Closures_: _Backtracking_
 
-Finalment, feu una ullada a aquest video: **The Power of Function
-Composition**, per Conor Hoekstra al congrés _Lambda World 2024_, com a mínim fins
-el minut **27:30**. 
+La funció `bTck` que representa l'esquema de _Backtracking_ és molt similar a una cerca en profunditat,
+però aquest cop el graf no està explícit, i només disposem de la funció `succ`. Si ens fixem,
+fem servir, un cop més, un vector com a pila (fent servir `conj`, `pop` i `peek`):
 
-Tot i que el podeu veure tot, ja que és força
-interessant i veureu _en acció_ llenguatges de programació que
-segurament no coneixeu.
+```Clojure
+(defn bTck [succ obj]   ;; ja coneixeu flip i foldr, les fem servir aquí
+  (letfn [(bTck' [v]
+            (cond
+              (empty? v)     []
+              (obj (peek v)) (conj (bTck' (pop v)) (peek v))
+              :else          (let [x (peek v)]
+                               (recur (foldr (flip conj) (pop v) (succ x))))))]
+    (fn [inicial]
+      (bTck' [inicial]))))
+```
 
-.center[![:scale 90%](figures/lambda2024video.png)]
+Ara ja podem fer servir les funcions que resolen el problema:
 
-El podeu trobar a [youtube.com/watch?v=W7fjzdEJnvY](https://www.youtube.com/watch?v=W7fjzdEJnvY)
+```Clojure
+(solucio-NReines 8) 👉 [[1 8] [2 4] [3 1] [4 3] [5 6] [6 2] [7 7] [8 5]]
+
+(nombre-solucions-NReines 8)  👉 92
+(nombre-solucions-NReines 11) 👉 2680
+(nombre-solucions-NReines 12) 👉 14200 ;; a la frontera de l'StackOverflow (!)
+
+```
 
 ---
 
