--- a/t2.md
+++ b/t2.md
@@ -1618,6 +1618,278 @@ Finalment:
 
 ---
 
+## Funcions d'ordre superior: _Pipelining_
+
+Definir funcions fent servir la composició de funcions s'anomena **_pipelining_**. A Clojure, la funció
+`comp`, juntament amb la possibilitat de definir funcions _parcials_ fent servir `partial`, ens 
+permet fer servir molt fàcilment aquesta tècnica.
+
+Al [laboratori](https://gebakx.github.io/cap/problemes/first-class.pdf) heu tingut ocasió de 
+practicar el _pipelining_, per exemple:
+
+```Clojure
+(def prod-of-evens (comp (partial apply *) (partial filter even?)))
+
+(def scalar-product (comp (partial apply +) (partial map *)))
+```
+
+---
+
+## _Pipelining_
+
+Un altre exemple, l'[exercici 4](https://gebakx.github.io/cap/firstClass.html#18) de la sessió de 
+[Funcions _First-Class_](https://gebakx.github.io/cap/firstClass.html) podríem haver-lo resolt
+així:
+
+```Clojure
+;; Escriu una funció que, donat un vector de maps amb les claus :preu i 
+;; :quantitat, calculi el total per cada element (preu * quantitat), elimini 
+;; els que tinguin un valor total inferior a 100 i sumi tots els totals.
+
+(def exercici4 (comp (partial apply +) 
+                     (partial filter #(< 100 %)) 
+                     (partial map #(* (:preu %) (:quantitat %)))))
+```
+
+
+De vegades, però, tot i tenint ocasió de fer servir el _pipelining_ no l'hem utilitzat. Si
+recordeu la versió funcional de l'[algorisme de Kadane](https://jdelgadopin.github.io/cap/t2.html#27):
+```Clojure
+(def kadane #(apply max (scanr max0 0 %)))
+```
+podríem haver-ho definit:
+```Clojure
+(def kadane (comp (partial apply max) (partial scanr max0 0)))
+```
+---
+
+##_Pipelining_: El Patró
+
+El mateix concepte de _pipeline_ és considerat un patró de disseny.red[*]
+
+_The Pipeline pattern organizes a series of computational steps so
+that each step handles a specific aspect of processing. In Clojure,
+this translates well due to its functional programming paradigm that
+supports higher-order functions and data immutability._
+
+```Clojure
+;; Segons el lloc web font d'aquesta transparència...
+
+(defn run-pipeline [data & steps]
+  (reduce (fn [d step] (step d)) data steps))
+```
+És força similar a un `my-comp` que podríem definir nosaltres:
+
+```Clojure
+(defn my-comp [& funcs]
+  "funcs: llista de funcions d'un paràmetre tals que 'té sentit' composar-les"
+  (fn [arg] 
+      "arg ha de pertànyer al domini de la darrera funció de funcs"
+      (fold #(%1 %2) arg funcs)))
+```
+
+.footnote[.red[*] [Pipeline in Clojure](https://softwarepatternslexicon.com/patterns-clojure/behavioral/pipeline/)]
+
+---
+
+## _Pipelining_: Les _arrow macros_
+
+Clojure ens proporciona un parell de macros que ens aniran molt bé per
+utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
+**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
+en un flux lineal de crides a funció.
+
+### La macro _thread-first_ (->)
+
+Suposem que tenim funcions `f1`,`f2`,...,`fn` amb `k1`,`k2`,..., `kn` paràmetres cada una (`ki` > 0).
+Per expressar:
+
+```Clojure
+(fn ... (f2 (f1 x ...) ...) ...)
+```
+Podem fer servir `->`, on es passa com a _primer_ argument el resultat de l'aplicació de
+la funció anterior:
+
+```Clojure
+  (-> x (f1 ...)  ;; on ... representa els k1-1 arguments restants d'f1
+        (f2 ...)  ;; on ... representa els k2-1 arguments restants d'f2
+        ...
+        (fn ...)) ;; on ... representa els kn-1 arguments restants d'fn
+```
+Si alguna de les funcions `fi` té un sol paràmetre, no cal fer servir parèntesi, només
+cal escriure el nom.
+
+.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+
+---
+
+## _Pipelining_: Les _arrow macros_
+
+Clojure ens proporciona un parell de macros que ens aniran molt bé per
+utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
+**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
+en un flux lineal de crides a funció.
+
+### La macro _thread-first_ (->)
+
+Veiem-ne exemples (fixem-nos que no cal escriure `partial`):
+
+```Clojure
+(* (+ (- (/ 2 1) 3) 4 )5)      👉 15
+(-> 2 (/ 1) (- 3) (+ 4) (* 5)) 👉 15 
+
+(str (str (str "Això" " " "és" " ") 
+          "un" " " "exemple" " " "de") 
+     " " "la" " " "macro" " " "->")   👉 "Això és un exemple de la macro ->"
+(->
+ (str "Això" " " "és" " ")
+ (str "un" " " "exemple" " " "de")
+ (str " " "la" " " "macro" " " "->")) 👉 "Això és un exemple de la macro ->"
+ 
+(.toUpperCase (first ["pollastre" "xai"]))  👉 "POLLASTRE"
+(-> ["pollastre" "xai"] first .toUpperCase) 👉 "POLLASTRE"
+```
+
+.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+
+---
+
+## _Pipelining_: Les _arrow macros_
+
+Clojure ens proporciona un parell de macros que ens aniran molt bé per
+utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
+**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
+en un flux lineal de crides a funció.
+
+### La macro _thread-first_ (->)
+
+Seguim amb exemples:
+
+```Clojure
+(assoc (assoc (assoc {} :clau1 24) :clau2 36) :clau3 48) 
+👉 {:clau1 24, :clau2 36, :clau3 48}
+(-> {}
+    (assoc :clau1 24)
+    (assoc :clau2 36)
+    (assoc :clau3 48)) 👉 {:clau1 24, :clau2 36, :clau3 48}
+    
+(conj (conj (conj [] 3) 5) 7) 👉 [3 5 7]
+(-> []
+    (conj 3)
+    (conj 5)
+    (conj 7)) 👉 [3 5 7]
+```
+
+.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+
+---
+
+## _Pipelining_: Les _arrow macros_
+
+Clojure ens proporciona un parell de macros que ens aniran molt bé per
+utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
+**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
+en un flux lineal de crides a funció.
+
+### La macro _thread-last_ (->>)
+
+Suposem que tenim funcions `f1`,`f2`,...,`fn` amb `k1`,`k2`,..., `kn` paràmetres cada una (`ki` > 0).
+Per expressar:
+
+```Clojure
+(fn ... (f2 ... (f1 ... x)))
+```
+Podem fer servir `->>`, on es passa com a _darrer_ argument el resultat de l'aplicació de
+la funció anterior:
+
+```Clojure
+  (->> x (f1 ...)  ;; on ... representa els k1-1 arguments restants d'f1
+         (f2 ...)  ;; on ... representa els k2-1 arguments restants d'f2
+         ...
+         (fn ...)) ;; on ... representa els kn-1 arguments restants d'fn
+```
+Si alguna de les funcions `fi` té un sol paràmetre, no cal fer servir parèntesi, només
+cal escriure el nom.
+
+.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+
+---
+
+## _Pipelining_: Les _arrow macros_
+
+Clojure ens proporciona un parell de macros que ens aniran molt bé per
+utilitzar _pipelining_ i fer més llegibles les funcions resultants: Les **_arrow macros _** (**->** i
+**->>**). La idea és senzilla.red[*]: Convertir una sèrie de crides imbricades a funció en
+en un flux lineal de crides a funció.
+
+### La macro _thread-last_ (->>)
+
+Veiem-ne exemples (fixem-nos que no cal escriure `partial`):
+
+```Clojure
+(reduce + (map #(* % %) (filter odd? (range 10)))) 👉 165
+(->> (range 10)
+     (filter odd?)
+     (map #(* % %))
+     (reduce +)) 👉 165
+     
+(def prod-of-evens (comp (partial apply *) (partial filter even?)))
+(defn prod-of-evens' [s]
+  (->> s
+       (filter even?)
+       (apply *)))
+(prod-of-evens  (range 1 21)) 👉 3715891200
+(prod-of-evens' (range 1 21)) 👉 3715891200
+```
+
+.footnote[.red[*][Font](https://clojure.org/guides/threading_macros)]
+
+---
+
+## _Pipelining_: Exercicis Recapitulatoris
+
+* Considereu una seqüència de parells `'[(n1,n2) (n3,n4) ...]` que
+  implementa les arestes d'un graf no dirigit (no hi ha arestes
+  repetides ni auto-bucles). Feu una funció `grau` que calculi el grau
+  d'un vertex donat. Els vertexos es representen amb nombres.
+
+* Sobre la mateixa representació de les arestes d'un graf no dirigit,
+  feu ara una funció `veïns` que retorni els veïns d’un vèrtex donat,
+  en ordre creixent.
+
+* Donats dos vectors d’enters `x=(x1,...,xn)` i `y=(y1,...,yn)` de la
+  mateixa mida, el seu producte escalar és `(apply + (map * x y))`.
+  Suposant que podem permutar les coordenades de cada vector de la
+  forma que volguem, podem escollir dues permutacions dels dos vectors
+  que tinguin producte escalar mínim. Escriviu una funció `minProd`
+  que, donats dos vectors de la mateixa mida, retorni el seu producte
+  escalar mínim.
+  
+* Feu una funció `zerosNones` que, donat un `n ≥ 0`,
+  retorni totes les combinacions de `z` zeros i `u` uns tals que `z + u = n`
+
+* Els divisors propis d’un nombre `n` són tots els divisors positius de `n` més petits que `n`.
+  Feu una funció `divisors` _eficient_ que retorni tots els divisors propis d'un nombre `n`
+  ordenats decreixentment.
+
+---
+
+## _Pipelining_
+
+Finalment, feu una ullada a aquest video: **The Power of Function
+Composition**, per Conor Hoekstra al congrés _Lambda World 2024_, com a mínim fins
+el minut **27:30**. 
+
+Tot i que el podeu veure tot, ja que és força
+interessant i veureu _en acció_ llenguatges de programació que
+segurament no coneixeu.
+
+.center[![:scale 90%](figures/lambda2024video.png)]
+
+El podeu trobar a [youtube.com/watch?v=W7fjzdEJnvY](https://www.youtube.com/watch?v=W7fjzdEJnvY)
+
+---
+
 ## Funcions d'ordre superior
 
 <br>
