--- a/t4.md
+++ b/t4.md
@@ -1003,3 +1003,7 @@ errors `StackOverflowError`?
 
 (maxkd-t 567432985647394320009214894231 25) 👉 7985647394320009214894231N
 ```
+
+---
+
+## _Transducers_. . .
