--- a/t4.md
+++ b/t4.md
@@ -1006,6 +1006,54 @@ errors `StackOverflowError`?
 
 ---
 
+## Transducers.red[*]
+
+Recordem (tema [2](https://jdelgadopin.github.io/cap/t2.html)) la importància que
+té el `reduce` (i _familia_), ja que permet abstreure un esquema molt general de
+transformació de seqüències.
+
+La funció argument de `reduce` pot ser qualsevol funció amb signatura
+`resultat, valor → resultat`. Les anomenarem _`reducing functions`_ (o funcions-_reduce_).
+Exemples en són `+` o `conj`.
+
+Ara, ja sabem que el `map` es pot expressar amb `reduce`. Si definim:
+
+```Clojure
+(defn map-reducer
+  [f]
+  (fn [resultat valor]
+    (conj resultat (f valor))))
+```
+
+Veiem que `(map inc (range 10)) ≡ (reduce (map-reducer inc) [] (range 10))`
+
+Fixeu-vos que, donada una transformació `f` sobre cada element d'una seqüència, la funció
+`map-reducer` retorna una funció-_reduce_:
+
+```Clojure
+(map-reduce f) ⇨ (fn [resultat valor] (conj resultat (f valor)))
+```
+
+.footnote[.red[*] Aquesta secció està basada en els documents
+[Understanding Transducers](https://elbenshira.com/blog/understanding-transducers/) de
+[Elben Shira](https://elbenshira.com) 
+<br> i
+[Transducers are coming](https://cognitect.com/blog/2014/8/6/transducers-are-coming)
+de [Rich Hickey](https://www.linkedin.com/in/richhickey), principalment.]
+
+---
+
 ## Transducers
+
+Un _`transducer`_ (no ho traduirem) és una funció `T` que aplica una transformació
+a una funció-_reduce_ per obtenir una nova funció-_reduce_. Si Clojure tingués tipus,
+diríem que:
+
+```Clojure
+transducer T: (resultat, valor → resultat) → (resultat, valor → resultat)
+```
+
+Per poder definir _transducers_ i treballar amb ells no ens cal res especial, amb la
+possibilitat de treballar amb funcions d'ordre superior és suficient.
 
 
