--- a/t4.md
+++ b/t4.md
@@ -1025,13 +1025,12 @@ Ara, ja sabem que el `map` es pot expressar amb `reduce`. Si definim:
     (conj resultat (f valor))))
 ```
 
-Veiem que `(map inc (range 10)) ≡ (reduce (map-reducer inc) [] (range 10))`
-
-Fixeu-vos que, donada una transformació `f` sobre cada element d'una seqüència, la funció
-`map-reducer` retorna una funció-_reduce_:
+Veiem que podem fer versions _reduce_ de diversos `map`:
 
 ```Clojure
-(map-reduce f) ⇨ (fn [resultat valor] (conj resultat (f valor)))
+(map inc (range 10))      ≡ (reduce (map-reducer inc) [] (range 10))
+(map dec (range 10))      ≡ (reduce (map-reducer dec) [] (range 10))
+(map #(* % %) (range 10)) ≡ (reduce (map-reducer #(* % %)) [] (range 10))
 ```
 
 .footnote[.red[*] Aquesta secció està basada en els documents
@@ -1040,6 +1039,42 @@ Fixeu-vos que, donada una transformació `f` sobre cada element d'una seqüènci
 <br> i
 [Transducers are coming](https://cognitect.com/blog/2014/8/6/transducers-are-coming)
 de [Rich Hickey](https://www.linkedin.com/in/richhickey), principalment.]
+
+---
+
+## Transducers
+
+Així doncs, donada una transformació `f` sobre cada element d'una seqüència, la funció
+`map-reducer` retorna una funció-_reduce_:
+
+```Clojure
+(map-reducer f) ⇨ (fn [resultat valor] (conj resultat (f valor)))
+```
+.small[**Exercici**: Definir `(filter-reducer predicat)` i `(take-reducer num)` de
+manera similar a com hem definit `map-reducer`. El resultat ha de ser una
+funció-_reduce_]
+
+Ara, fixem-nos que abans hem posat com a exemple de funció-_reduce_
+`conj`, que és una funció-_reduce_ que fa servir `map-reducer`
+(`filter-reducer` i `take-reducer` també, si heu fet l'exercici).
+
+Podem fer-ne abstracció i fer servir _qualsevol_ funció-_reduce_:
+
+```Clojure
+(defn mapping
+  [f]
+  (fn [freduce]
+    (fn [resultat valor]
+      (freduce resultat (f valor)))))
+```
+
+I ara, `(map-reducer f) ≡ ((mapping f) conj)` on adonem-nos que `(mapping f)` rep
+una funció-_reduce_ com a argument i retorna una funció-_reduce_.
+
+Això és precisament un **_Transducer_**
+
+
+
 
 ---
 
@@ -1056,4 +1091,17 @@ transducer T: (resultat, valor → resultat) → (resultat, valor → resultat)
 Per poder definir _transducers_ i treballar amb ells no ens cal res especial, amb la
 possibilitat de treballar amb funcions d'ordre superior és suficient.
 
+.small[**Exercici**: Definir `(filtering predicat)` i `(taking num)` de
+manera similar a com hem definit `mapping`. El resultat ha de ser un _transducer_]
+<br>
+_Transducers are composable algorithmic transformations. They are
+independent from the context of their input and output sources and
+specify only the essence of the transformation in terms of an
+individual element. Because transducers are decoupled from input or
+output sources, they can be used in many different processes -
+collections, streams, channels, observables, etc. Transducers compose
+directly, without awareness of input or creation of intermediate
+aggregates._.
+
+.tiny[[.red[Font: Referència Clojure]](https://clojure.org/reference/transducers)]
 
