--- a/t4.md
+++ b/t4.md
@@ -1055,7 +1055,7 @@ manera similar a com hem definit `map-reducer`. El resultat ha de ser una
 funció-_reduce_]
 
 Ara, fixem-nos que abans hem posat com a exemple de funció-_reduce_
-`conj`, que és una funció-_reduce_ que fa servir `map-reducer`
+`conj`, que és la funció-_reduce_ que fa servir `map-reducer`
 (`filter-reducer` i `take-reducer` també, si heu fet l'exercici).
 
 Podem fer-ne abstracció i fer servir _qualsevol_ funció-_reduce_:
@@ -1072,9 +1072,6 @@ I ara, `(map-reducer f) ≡ ((mapping f) conj)` on adonem-nos que `(mapping f)` 
 una funció-_reduce_ com a argument i retorna una funció-_reduce_.
 
 Això és precisament un **_Transducer_**
-
-
-
 
 ---
 
@@ -1105,3 +1102,194 @@ aggregates._.
 
 .tiny[[.red[Font: Referència Clojure]](https://clojure.org/reference/transducers)]
 
+---
+
+## Transducers
+
+No cal que nosaltres ens programem _transducers_ com `mapping` o `filtering`.
+Afortunadament moltes funcions de la [_Clojure Sequence Library_](https://clojure.org/reference/sequences)
+es poden fer servir per generar _transducers_:
+
+_The following functions produce a transducer when the input collection
+is omitted: map, cat, mapcat, filter, remove, take, take-while, take-nth, drop,
+drop-while, replace, partition-by, partition-all, keep, keep-indexed,
+map-indexed, distinct, interpose, dedupe, and random-sample._
+
+.tiny[[.red[Font: Referència Clojure]](https://clojure.org/reference/transducers)]
+
+Així doncs, el nostre `(mapping f)` és equivalent a fer servir `(map f)`.
+
+És obvi que dos _transducers_, tenint la signatura que tenen, es poden **composar**.
+El resultat, és clar, és un altre _transducer_. Aixo ho fem simplement amb `comp`. Per exemple, continuant amb `map` i `filter`:
+
+```Clojure
+(def xform
+  (comp
+    (map inc)
+    (filter even?))) 👉 #'user/xform
+
+(reduce (xform conj) [] (range 10)) 👉 [2 4 6 8 10]
+```
+---
+
+## Transducers
+
+Preneu-vos uns minuts per pensar sobre l'exemple que acabem de posar...
+
+```Clojure
+(def xform
+  (comp
+    (map inc)
+    (filter even?))) 👉 #'user/xform
+
+(reduce (xform conj) [] (range 10)) 👉 [2 4 6 8 10] ;; què fa el 10 aquí?!?!
+```
+
+---
+
+## Transducers
+
+Preneu-vos uns minuts per pensar sobre l'exemple que acabem de posar...
+
+```Clojure
+(def xform
+  (comp
+    (map inc)
+    (filter even?))) 👉 #'user/xform
+
+(reduce (xform conj) [] (range 10)) 👉 [2 4 6 8 10]
+```
+
+Si enteneu perfectament per quina raó **primer** apliquem `inc` i **després**
+apliquem el filtre `even?` no us cal continuar llegint...
+
+En cas contrari mirarem de fer-vos-ho entendre... i, de pas, entendrem
+per quina raó en fer servir _transducers_ no es creen resultats (col·leccions)
+intermedis, i veurem que, efectivament, amb les eines que ens proporcionen les
+funcions d'ordre superior en tenim prou (tal com us hem dit abans).
+
+---
+
+## Transducers
+
+Tornem als nostres _transducers_ "casolans"...
+
+```Clojure
+(defn mapping
+  [f]
+  (fn [freduce]
+    (fn [resultat valor]
+      (freduce resultat (f valor)))))
+
+(defn filtering
+  [predicat]
+  (fn [freduce]
+    (fn [resultat valor]
+      (if (predicat valor)
+        (freduce resultat valor)
+        resultat))))
+```
+
+i fem l'exemple que ha motivat aquesta explicació, però amb els
+nostres _transducers_ equivalents:
+
+```Clojure
+(def xform
+  (comp
+    (mapping inc)
+    (filtering even?))) 👉 #'user/xform
+
+(reduce (xform conj) [] (range 10)) 👉 [2 4 6 8 10]
+```
+
+---
+
+## Transducers
+
+Ja sabem que `((comp a b) x) ≡ (a (b x))`, per tant:
+
+```Clojure
+(xform conj) ≡ ((mapping inc) ((filtering even?) conj)) ≡
+```
+
+Ara,
+
+```Clojure
+((filtering even?) conj) ≡ (fn [resultat valor]   ⇦ Anomenem F a aquesta funció 
+                               (if (even? valor)
+                                  (conj resultat valor)
+                                  resultat))
+```
+i finalment:
+
+```Clojure
+(xform conj) ≡ ((mapping inc) ((filtering even?) conj)) ≡ ((mapping inc) F) ≡
+(fn [resultat valor]
+  (F resultat (inc valor)))
+```
+és a dir, *primer* apliquem `inc` al valor que toqui de la col·lecció, i
+després apliquem `F` (el filtre) a aquest nou valor.
+Aquesta és la funció que es fa servir al `(reduce (xform conj) [] (range 10))`
+
+---
+
+## Transducers
+
+Aquest exemple també deixa clar que l'aplicació del _transducer_ es fa
+als valors de la col·lecció quan es fa el corresponent recorregut
+d'aquesta. Així doncs, encara que haguem composat diversos _transducers_,
+_no es generen col·leccions de resultats intermedis_.
+
+Això és essencialment el que ens deia un fragment d'una cita que hem
+vist fa unes _slides_: _(...) They are
+independent from the context of their input and output sources and
+specify only the essence of the transformation in terms of an
+individual element_.
+
+Si invertim l'ordre en la composició, seguint amb l'exemple anterior, fixem-nos que...
+```Clojure
+(def xform
+  (comp
+    (filtering even?)
+    (mapping inc))) 👉 #'user/xform
+
+(reduce (xform conj) [] (range 10)) 👉 [1 3 5 7 9]
+```
+
+Primer es filtra i després s'incrementa.
+
+---
+
+## Transducers
+
+Quan composem $N$ _transducers_, `(comp T1 T2 ... TN)` les
+corresponents transformacions que fa cada _transducer_ `Ti` sobre cada
+element de la seqüència es faran en l'ordre especificat en la
+composició: primer `T1`, sobre el resultat s'aplicarà `T2`, etc. fins
+a arribar a `TN`.
+
+El que cal emfatitzar aquí és que `comp` **_no fa res d'especial_**
+amb els _transducers_. La composició de funcions, utilitzada de la
+manera _habitual_ ja ens va bé per composar _transducers_.
+
+Hi ha diverses maneres de fer servir el _transducers_.
+
+Clojure ens ofereix `transduce`, que fa un paper similar al `reduce`
+però assumint que també es proporciona la funció-_reduce_
+corresponent:
+
+```Clojure
+(transduce xform f coll)        ;; es fa servir (f) com a init
+(transduce xform f init coll)
+```
+
+Per exemple:
+
+```Clojure
+(def xf (comp (filter odd?) (map inc)))
+
+(transduce xf + (range 5))     👉 6
+(transduce xf + 100 (range 5)) 👉 106
+```
+
+.tiny[[.red[Font: Referència Clojure]](https://clojure.org/reference/transducers)]
