--- a/t4.md
+++ b/t4.md
@@ -1038,7 +1038,8 @@ Veiem que podem fer versions _reduce_ de diversos `map`:
 [Elben Shira](https://elbenshira.com) 
 <br> i
 [Transducers are coming](https://cognitect.com/blog/2014/8/6/transducers-are-coming)
-de [Rich Hickey](https://www.linkedin.com/in/richhickey), principalment.]
+de [Rich Hickey](https://www.linkedin.com/in/richhickey),
+principalment. Això que veurem pretén ser només una introducció.]
 
 ---
 
@@ -1293,3 +1294,79 @@ Per exemple:
 ```
 
 .tiny[[.red[Font: Referència Clojure]](https://clojure.org/reference/transducers)]
+
+---
+
+## Transducers
+
+Podem _ajornar_ l'execució d'un _transducer_ sobre una seqüència fins
+que es proporcioni una funció-_reduce_. Cal fer servir `eduction`. Així l'objecte
+resultant es pot fer servir en lloc d'una seqüència a `reduce`:
+
+```Clojure
+(def xf (comp (filter odd?) (map inc)))
+
+(def iter (eduction xf (range 1 6)))
+
+(reduce + 0 iter) 👉 12     ;; on + és la funció-reduce: 0+2+4+6
+;; aquesta expressió és equivalent a (reduce (xf +) 0 (range 1 6))
+(reduce * 1 iter) 👉 48     ;; on * és la funció-reduce: 1*2*4*6
+;; aquesta expressió és equivalent a (reduce (xf *) 1 (range 1 6))
+```
+
+Podem crear una col·lecció a partir del _transducer_, proporcionant
+una seqüència i suposant _implícitament_ que la funció-_reduce_ és
+`conj`. Això ho fem amb `into`:
+
+```Clojure
+(def xf (comp (filter odd?) (map inc)))
+
+(into  [] xf (range 30)) 👉 [2 4 6 8 10 12 14 16 18 20 22 24 26 28 30]
+(into '() xf (range 30)) 👉 (30 28 26 24 22 20 18 16 14 12 10 8 6 4 2)
+
+;; són respectivament equivalents a:
+;; (reduce (xf conj)  [] (range 30))
+;; (reduce (xf conj) '() (range 30))
+```
+.tiny[[.red[Font: Referència Clojure]](https://clojure.org/reference/transducers)]
+
+---
+
+## Transducers
+
+Usualment els _transducers_ són _eager_ (voraços) (els conceptes de
+_lazy_ i _eager_ els veurem al tema
+[6](https://jdelgadopin.github.io/cap/t6.html), però si volem
+convertir-ho a una seqüència (que són _lazy_ per defecte) podem fer
+servir `sequence`:
+
+```Clojure
+(def xf (comp (filter odd?) (map inc)))
+
+(sequence xf (range 30)) 👉 (2 4 6 8 10 12 14 16 18 20)
+
+(take 10 (sequence xf (iterate inc 1))) 👉 (2 4 6 8 10 12 14 16 18 20)
+
+;; però...
+
+(take 15 (into [] xf (iterate inc 1))) 👉  ERROR: NO ACABA
+
+```
+.tiny[[.red[Font: Referència Clojure]](https://clojure.org/reference/transducers)]
+
+N'hi ha més a explicar sobre _transducers_. Considereu, però, el que hem vist
+com una introducció.
+
+---
+
+## Transducers: Exercicis Recapitulatoris
+
+* Implementeu `transduce` (sense fer servir el `transduce` de Clojure,
+  és clar!).
+
+* Implementeu `taking`, exercici de la plana [35](https://jdelgadopin.github.io/cap/t4.html#35)
+  (sense fer servir `take`, és clar)
+   
+* Implementeu `mapcatting`, versió _transducer_ del
+  `mapcat` de Clojure (sense fer servir `mapcat`, és clar)
+
