--- a/t2.md
+++ b/t2.md
@@ -868,7 +868,7 @@ La diferència entre fer servir `:when` i `:while` és subtil:
 
 És fàcil veure que fent servir `for` podem aconseguir el mateix que aconseguim amb algunes
 funcions de la _Clojure Sequence Library_. De fet, precisament això forma
-part dels [exercicis](https://gebakx.github.io/cap/problemes/llistes-comprensio.pdf) 
+part dels [exercicis](https://jutge.org/problems/W54264_ca) 
 que corresponen a les sessions de laboratori d'aquest tema.
 
 .small[[Font](https://clojuredocs.org/clojure.core/for)]
@@ -1624,7 +1624,7 @@ Definir funcions fent servir la composició de funcions s'anomena **_pipelining_
 `comp`, juntament amb la possibilitat de definir funcions _parcials_ fent servir `partial`, ens 
 permet fer servir molt fàcilment aquesta tècnica.
 
-Al [laboratori](https://gebakx.github.io/cap/problemes/first-class.pdf) heu tingut ocasió de 
+Al [laboratori](https://gebakx.github.io/cap/firstClass.html#20) heu tingut ocasió de 
 practicar el _pipelining_, per exemple:
 
 ```Clojure
@@ -1637,8 +1637,8 @@ practicar el _pipelining_, per exemple:
 
 ## _Pipelining_
 
-Un altre exemple, l'[exercici 4](https://gebakx.github.io/cap/firstClass.html#18) de la sessió de 
-[Funcions _First-Class_](https://gebakx.github.io/cap/firstClass.html) podríem haver-lo resolt
+Un altre exemple, l'[exercici 3](https://jutge.org/problems/X13379_ca) de la sessió de 
+[Funcions _First-Class_](https://gebakx.github.io/cap/firstClass.html#1) podríem haver-lo resolt
 així:
 
 ```Clojure
@@ -1646,7 +1646,7 @@ així:
 ;; :quantitat, calculi el total per cada element (preu * quantitat), elimini 
 ;; els que tinguin un valor total inferior a 100 i sumi tots els totals.
 
-(def exercici4 (comp (partial apply +) 
+(def exercici3 (comp (partial apply +) 
                      (partial filter #(< 100 %)) 
                      (partial map #(* (:preu %) (:quantitat %)))))
 ```
